--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "version": "1.0.0",
   "description": "A persistent memory layer for your codebase + AI agent",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "workspaces": [
     "dashboard"
   ],
   "bin": {
     "memowiki": "./dist/index.js"
   },
+  "files": [
+    "dist/**",
+    "dashboard/dist/dashboard/browser/**",
+    "README.md",
+    "LICENSE",
+    "docs/**"
+  ],
   "scripts": {
     "build": "tsc",
     "build:dashboard": "cd dashboard && npm run build",
     "build:all": "npm run build && npm run build:dashboard",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "jest"
+    "dev:serve": "nodemon --watch src --ext ts,js,json --ignore dashboard/dist --ignore .codewiki --signal SIGINT --exec \"ts-node src/index.ts serve\"",
+    "test": "jest",
+    "prepublishOnly": "npm run build:all"
   },
   "keywords": [
     "ai",
@@ -24,40 +34,38 @@
     "memory"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "exports": {
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
+  },
   "dependencies": {
-    "@angular/animations": "^20.3.15",
-    "@angular/cdk": "^21.0.1",
-    "@angular/material": "^21.0.1",
     "@anthropic-ai/sdk": "^0.32.1",
     "@google/generative-ai": "^0.21.0",
-    "@ngrx/effects": "^20.1.0",
-    "@ngrx/store": "^20.1.0",
-    "@ngrx/store-devtools": "^20.1.0",
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
     "axios": "^1.7.9",
-    "better-sqlite3": "^12.5.0",
-    "chart.js": "^4.5.1",
     "chromadb": "^3.1.6",
     "commander": "^11.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.2.1",
-    "marked": "^17.0.1",
-    "mermaid": "^11.12.1",
-    "ng2-charts": "^8.0.0",
-    "ngx-markdown": "^21.0.0",
     "openai": "^4.77.0",
     "simple-git": "^3.22.0",
     "ts-morph": "^21.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
