--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.2.1",
+    "chalk": "^4.1.2",
     "openai": "^4.77.0",
     "simple-git": "^3.22.0",
     "ts-morph": "^21.0.1",
