--- a/package.json
+++ b/package.json
@@ -57,12 +57,12 @@
     "@anthropic-ai/sdk": "^0.32.1",
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
+    "chalk": "^4.1.2",
     "chromadb": "^3.1.6",
     "commander": "^11.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.2.1",
-    "chalk": "^4.1.2",
     "openai": "^4.77.0",
     "simple-git": "^3.22.0",
     "ts-morph": "^21.0.1",
@@ -77,6 +77,7 @@
     "nodemon": "^3.1.11",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.28.15",
     "typescript": "^5.3.3"
   }
 }
