--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ theme:
     - navigation.top
     - navigation.sections
     - navigation.expand
+    - navigation.footer
     - toc.integrate
     - content.code.copy
 
