fix: make .mmd files previewable and fix full-scan gitState handling
- Strip Markdown code fences when saving diagrams/flows so .mmd files render in preview tools
- Add null-safety in BaseProvider prompts to handle missing gitState/status
- Provide safe default gitState for --full scans and filter files via FileFilter
- Update LLM prompts to request Mermaid code without fences
- Fixes TypeError on 'memowiki update --full' and enables Mermaid previewing

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dev": "ts-node src/index.ts",
     "dev:serve": "nodemon --watch src --ext ts,js,json --ignore dashboard/dist --ignore .codewiki --signal SIGINT --exec \"ts-node src/index.ts serve\"",
     "test": "jest",
-    "prepublishOnly": "npm run build:all"
+    "prepublishOnly": "npm run build:all",
+    "publish": "npm version patch && npm publish --access public"
   },
   "keywords": [
     "ai",
@@ -43,6 +44,7 @@
   "bugs": {
     "url": "https://github.com/spanexx/MemoWikiV1/issues"
   },
+  "documentation": "https://spanexx.github.io/MemoWikiV1",
   "engines": {
     "node": ">=18.0.0"
   },
